--- a/dietersDilemmaBelief.html
+++ b/dietersDilemmaBelief.html
@@ -482,7 +482,7 @@
                 'bg-gray-200 text-gray-400'
               } ${drinkHighlight}`}>
                 {isLocked && isOn && <span className="absolute -top-2 -right-2 text-sm">🔒</span>}
-                <span className="text-2xl mr-2">🥤</span>
+                <span className="text-2xl mr-2">{CONFIG.playerIcon0}</span>
                 <div className="flex flex-col">
                   <span className="text-sm font-bold">Drink</span>
                   <span className="text-sm font-bold">{playerName0}</span>
