--- a/dagElicitation.html
+++ b/dagElicitation.html
@@ -341,7 +341,7 @@
         const displayEdges = finalEdges || edges;
 
         return (
-          <div className="min-h-screen bg-white p-4">
+          <div className="min-h-screen bg-white px-4 pt-0 pb-4">
             <div className="max-w-4xl mx-auto">
               <div className="bg-white rounded-2xl p-6">
                 {/* Display the final DAG */}
@@ -512,7 +512,7 @@
       }
 
       return (
-        <div className="min-h-screen bg-white p-4">
+        <div className="min-h-screen bg-white px-4 pt-0 pb-4">
           <div className="max-w-4xl mx-auto">
             <div className="bg-white rounded-2xl p-6">
               <div className="mb-4">
