--- a/dietersDilemma.html
+++ b/dietersDilemma.html
@@ -801,7 +801,7 @@
       }
       
       return (
-        <div className="min-h-screen bg-white p-4">
+        <div className="min-h-screen bg-white px-4 pt-0 pb-4">
           <div className="max-w-6xl mx-auto">
               <div className="bg-gray-50 rounded-2xl p-6 mb-4 border border-gray-200 shadow-sm relative overflow-hidden">
               <NewDayOverlay show={showNewDay} dayNumber={nextDayNumber} />
