--- a/dietersDilemmaBelief.html
+++ b/dietersDilemmaBelief.html
@@ -877,7 +877,7 @@
       const effectiveWalkthroughStep = walkthroughContent.skipToStep1 && walkthroughStep === 0 ? 1 : walkthroughStep;
 
       return (
-        <div className="min-h-screen bg-white p-4">
+        <div className="min-h-screen bg-white px-4 pt-0 pb-4">
           <div className="max-w-5xl mx-auto">
             {/* Progress */}
             <div className="mb-6">
@@ -1085,7 +1085,7 @@
       const [showDetails, setShowDetails] = useState(false);
 
       return (
-        <div className="min-h-screen bg-white p-4">
+        <div className="min-h-screen bg-white px-4 pt-0 pb-4">
           <div className="max-w-5xl mx-auto">
             <div className="bg-white rounded-xl shadow-lg p-8">
               {/* Title */}
