--- a/dieterInstructions.html
+++ b/dieterInstructions.html
@@ -560,10 +560,10 @@
       const isLastPage = currentPage === totalPages - 1;
 
       return (
-        <div className="min-h-screen bg-white p-4">
+        <div className="min-h-screen bg-white px-4 pt-0 pb-4">
           <div className="max-w-5xl mx-auto">
             {/* Main Content Card */}
-            <div className="bg-white rounded-2xl p-6">
+            <div className="bg-white rounded-2xl px-6 pb-6 pt-2">
               <h1 className="text-3xl font-bold text-gray-900 mb-2 text-center">
                 {currentPage < 6 ? 'Instructions' : 'Comprehension Check'}
               </h1>
