--- a/additionalQuestions.html
+++ b/additionalQuestions.html
@@ -291,7 +291,7 @@
         <div className="min-h-screen bg-white py-10 px-4">
           <div className="max-w-5xl mx-auto">
             <h1 className="text-2xl font-bold text-gray-900 mb-4 text-center">
-              Questions about Study {CONFIG.currentSymbol}
+              Questions about Study {CONFIG.gameCounter}
             </h1>
 
             {page === 1 && (
