--- a/additionalQuestions.html
+++ b/additionalQuestions.html
@@ -288,7 +288,7 @@
       };
 
       return (
-        <div className="min-h-screen bg-white py-10 px-4">
+        <div className="min-h-screen bg-white pt-0 pb-10 px-4">
           <div className="max-w-5xl mx-auto">
             <h1 className="text-2xl font-bold text-gray-900 mb-4 text-center">
               Questions about Study {CONFIG.gameCounter}
